--- a/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
+++ b/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
@@ -1,9 +1,9 @@
 <app-page-header>Админка</app-page-header>
 
-<div class="container my-5">
-  <div class="row" *ngIf="dashboardData">
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+<div class="container mx-auto my-5">
+  <div class="flex flex-wrap" *ngIf="dashboardData">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Средняя оценка статистики</div>
         <app-star-rating-readonly
           [source]="dashboardData.averageRatingData.averageRating"
@@ -19,8 +19,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Кол-во анкет ЗП</div>
         <div class="mt-1 h2">
           {{ dashboardData.totalSalaries }}
@@ -28,8 +28,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Кол-во отзывов на компании</div>
         <div class="mt-1 h2">
           {{ dashboardData.totalCompanyReviews }}
@@ -37,8 +37,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Отписанных от емейлов</div>
         <div class="mt-1 h2">
           {{ dashboardData.usersWithUnsubscribeMeFromAllCount }}
@@ -46,8 +46,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Емейлов отправлено</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -58,8 +58,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Лайков на отзывы</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -70,8 +70,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Отзывов оставлено</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -82,8 +82,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Сообщений Github Profile Bot</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -94,8 +94,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Инлайн кликов Github Profile Bot</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -106,8 +106,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Сообщений Salaries Bot</div>
         <div class="mt-1">
           <app-items-per-day-chart
@@ -118,8 +118,8 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-3">
-      <div class="card card-body p-3">
+    <div class="w-full md:w-1/3 mb-3 px-2">
+      <div class="bg-white rounded-lg shadow p-3">
         <div class="h5">Инлайн кликов Salaries Bot</div>
         <div class="mt-1">
           <app-items-per-day-chart
