--- a/src/app/modules/interviews/components/interview-page/interview-page.component.html
+++ b/src/app/modules/interviews/components/interview-page/interview-page.component.html
@@ -2,44 +2,44 @@
   {{ pageTitle }}
 </app-page-header>
 
-<div *ngIf="interview; else dataLoading" class="container mt-5">
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
+<div *ngIf="interview; else dataLoading" class="container mx-auto mt-5">
+  <div class="flex flex-wrap">
+    <div class="w-full sm:w-1/4">
+      <div class="bg-white rounded-lg shadow">
+        <div class="p-6">
+          <ul class="divide-y divide-gray-200">
+            <li class="px-4 py-3 border-0">
               <app-go-back-button></app-go-back-button>
             </li>
 
-            <li class="list-group-item">
-              <div class="text-muted small">Интервью провел</div>
-              <div class="small">
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Интервью провел</div>
+              <div class="text-sm">
                 {{ interview.interviewer?.email }}
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Кандидат</div>
-              <div class="small">
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Кандидат</div>
+              <div class="text-sm">
                 {{ interview.candidateName }}
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Грейд</div>
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Грейд</div>
               <div class="">
                 <app-developer-grade-label
                   [grade]="interview.candidateGrade"
                 ></app-developer-grade-label>
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Тем</div>
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Тем</div>
               <div>
                 {{ interview.subjects?.length ?? 0 }}
               </div>
             </li>
-            <li class="list-group-item" *ngIf="interview.labels.length > 0">
-              <div class="text-muted small">Тэги</div>
+            <li class="px-4 py-3 border-0" *ngIf="interview.labels.length > 0">
+              <div class="text-gray-500 text-sm">Тэги</div>
               <div>
                 <app-label
                   *ngFor="let item of interview.labels"
@@ -47,42 +47,46 @@
                 ></app-label>
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Обновлено</div>
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Обновлено</div>
               <div>
                 {{ interview.updatedAt | date: "yyyy-MM-dd HH:mm" }}
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Экспорт</div>
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Экспорт</div>
               <div>
                 <app-loading-button
-                  [css]="'btn btn-sm btn-outline-dark ms-1'"
+                  [css]="
+                    'border border-gray-800 text-gray-800 text-xs px-2 py-1 rounded hover:bg-gray-100 ml-1'
+                  "
                   (clicked)="markdownFromServer()"
                 >
                   Markdown
                 </app-loading-button>
                 <app-loading-button
-                  [css]="'btn btn-sm btn-outline-dark ms-1'"
+                  [css]="
+                    'border border-gray-800 text-gray-800 text-xs px-2 py-1 rounded hover:bg-gray-100 ml-1'
+                  "
                   (clicked)="exportAsPDF()"
                 >
                   PDF
                 </app-loading-button>
               </div>
             </li>
-            <li class="list-group-item">
-              <div class="text-muted small">Действия</div>
+            <li class="px-4 py-3 border-0">
+              <div class="text-gray-500 text-sm">Действия</div>
               <div>
                 <a
                   routerLink="/interviews/{{ interview.id }}/edit"
                   class="btn-link-sm"
-                  title="Edit the interview"
+                  title="Edit interview"
                   >Редактировать</a
                 >
                 <button
                   type="button"
-                  class="btn-link-sm btn-link-danger ms-1"
-                  title="Delete the interview"
+                  class="btn-link-sm btn-link-danger ml-1"
+                  title="Delete interview"
                   (click)="delete()"
                 >
                   Удалить
@@ -94,9 +98,9 @@
       </div>
     </div>
 
-    <div class="col-sm-9">
-      <div class="card">
-        <div class="card-body">
+    <div class="w-full sm:w-3/4">
+      <div class="bg-white rounded-lg shadow">
+        <div class="p-6">
           <div class="mb-3" *ngIf="interview && interview.overallOpinion">
             <div>
               <markdown>{{ interview.overallOpinion }}</markdown>
@@ -105,23 +109,23 @@
         </div>
       </div>
 
-      <div class="card mt-3">
-        <div class="card-body">
+      <div class="bg-white rounded-lg shadow mt-3">
+        <div class="p-6">
           <ul
-            class="list-group list-group-flush"
+            class="divide-y divide-gray-200"
             *ngIf="
               interview && interview.subjects && interview.subjects.length > 0;
               noSubjectsYet
             "
           >
             <li
-              class="list-group-item"
+              class="px-4 py-3 border-0"
               *ngFor="let item of interview.subjects; let i = index"
             >
-              <div class="d-flex justify-content-between">
-                <div class="d-inline-block">
-                  <span class="text-muted small">{{ i + 1 }}.</span
-                  ><strong class="ms-1">{{ item.title }}</strong>
+              <div class="flex justify-between">
+                <div class="inline-block">
+                  <span class="text-gray-500 text-sm">{{ i + 1 }}.</span
+                  ><strong class="ml-1">{{ item.title }}</strong>
                 </div>
                 <span
                   ><app-developer-grade-label
@@ -129,7 +133,7 @@
                   ></app-developer-grade-label
                 ></span>
               </div>
-              <div class="ps-3 small" *ngIf="item.comments">
+              <div class="pl-3 text-sm" *ngIf="item.comments">
                 <markdown>{{ item.comments }}</markdown>
               </div>
             </li>
@@ -141,15 +145,15 @@
 </div>
 
 <ng-template #noSubjectsYet>
-  <div class="card">
-    <div class="card-body text-center">
+  <div class="bg-white rounded-lg shadow">
+    <div class="p-6 text-center">
       <span class="h4">No subjects were discussed</span>
     </div>
   </div>
 </ng-template>
 
 <ng-template #dataLoading>
-  <div class="container mt-5">
+  <div class="container mx-auto mt-5">
     <app-data-loader></app-data-loader>
   </div>
 </ng-template>
